--- a/index.html
+++ b/index.html
@@ -5,16 +5,51 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Vy Tran</title>
-  <link rel="stylesheet" href="styles.css">
+  <link rel="stylesheet" href="./style.css">
+  <script src="https://kit.fontawesome.com/c8e4d183c2.js" crossorigin="anonymous"></script> 
 </head>
 <body>
-  test
-</body>
-  <section id="about me">
+  <section id="about-me">
     <nav>
-      <div class="personal-logo">Vy Tran</div>
-      <div class="nav-link-list"></div>
+      <div class="personal_logo">Vy Tran</div>
+      <ul class="nav_link--list">
+        <li>
+          <a href="" class="
+            nav_link--anchor
+            nav_hover-effect
+            link_hover-effect--black
+           ">Language</a>
+        </li>
+        <li>
+        <a href="" class="
+            nav_link--anchor
+            nav_hover-effect
+            link_hover-effect--black
+           ">Project</a>
+        </li>
+        <li>
+        <a href="" class="
+            nav_link--anchor
+            nav_link--anchor-primary
+           ">Contact</a>
+        </li>
+      </ul>
     </nav>
-
+    <div class="flex flex-1">
+      <div class="about-me_info row">
+        <div class="about-me_info--container">
+          <figure class="about-me_picture--mask">
+            <img src="./pictures/profile-picture1.jpg" class="about-me_picture"  alt="picture of me">
+          </figure>    
+          <h1 class="about-me_info--title"> Hey! I'm <span class="text--purple">Vy Tran</span> &#128075; </h1>
+            <p class="about-me_info--para">
+              I'm learning to be <strong class="text--purple">software engineer</strong> with a strong passion for website, application 
+              development
+            </p>          
+        </div>
+        <div class="about-me_links"></div>
+      </div>
+    </div>
   </section>
+</body>
 </html>
