--- a/index.html
+++ b/index.html
@@ -41,14 +41,27 @@
           <figure class="about-me_picture--mask">
             <img src="./pictures/profile-picture1.jpg" class="about-me_picture"  alt="picture of me">
           </figure>    
-          <h1 class="about-me_info--title"> Hey! I'm <span class="text--purple">Vy Tran</span> &#128075; </h1>
+          <h1 class="about-me_info--title"> Hello! I'm <span class="text--purple">Vy Tran</span> &#128075; </h1>
             <p class="about-me_info--para">
-              I'm learning to be <strong class="text--purple">software engineer</strong> with a strong passion for website, application 
+              My goal is to be <strong class="text--purple">skillfull software engineer</strong> with a strong passion for website, application 
               development
-            </p>          
+            </p> 
+              <div class="about-me_links">
+                <a href="" class="about-me_link" >
+                  <i class="fab fa-linkedin-in"></i>
+                </a>
+                <a href="" class="about-me_link" >
+                  <i class="far fa-envelope"></i>
+                </a>
+                <a href="" class="about-me_link" >
+                  <i class="fab fa-github"></i>
+                </a>
+              </div>         
         </div>
-        <div class="about-me_links"></div>
-      </div>
+          <figure class="about-me_img--container">
+          <img src="./pictures/undraw_websites.svg" class="about-me_img">  </a>
+        </figure>
+      </div>                  
     </div>
   </section>
 </body>
