--- a/index.html
+++ b/index.html
@@ -64,5 +64,62 @@
       </div>                  
     </div>
   </section>
+  <section id="languages">
+    <div class="container">
+      <div class="row">
+        <h1 class="section_title">This is my <span class="text--purple">technology stack</span> </h1>
+        <div class="language_list">
+          <div class="language">
+            <figure class="language_img--wrapper">
+             <img src="./pictures/240px-HTML5_Badge.svg.png" alt="" class="language_img">
+            </figure>  
+             <span class="language_name">HTML</span>                     
+          </div>
+          <div class="language">
+            <figure class="language_img--wrapper">
+             <img src="./pictures/css-131-722685.webp" alt="" class="language_img">
+            </figure>
+           <span class="language_name">CSS</span> 
+          </div>
+          <div class="language">
+            <figure class="language_img--wrapper">
+             <img src="./pictures/javascript-1-225993.webp" alt="" class="language_img">
+            </figure>
+           <span class="language_name">JavaScript</span> 
+          </div>
+          <div class="language">
+            <figure class="language_img--wrapper">
+             <img src="./pictures/typescript-3521774-2945272.webp" alt="" class="language_img">
+            </figure>
+              <span class="language_name">TypeScript</span>                       
+          </div>
+          <div class="language">
+            <figure class="language_img--wrapper">
+             <img src="./pictures/vue-282497.webp" alt="" class="language_img">
+            </figure>
+              <span class="language_name">Vue</span>
+          </div>
+          <div class="language">
+            <figure class="language_img--wrapper">
+             <img src="./pictures/nuxt-dot-js-3628959-3030184.webp" alt="" class="language_img">
+            </figure>
+              <span class="language_name">Nuxt</span>
+          </div>
+          <div class="language">
+            <figure class="language_img--wrapper">
+             <img src="./pictures/react-3-1175109.webp" alt="" class="language_img">
+            </figure>
+              <span class="language_name">React</span>
+          </div>
+          <div class="language">
+            <figure class="language_img--wrapper">
+             <img src="./pictures/mobx.png" alt="" class="language_img">
+            </figure>
+              <span class="language_name">MobX</span>
+          </div>       
+        </div>
+      </div>
+    </div>
+  </section>
 </body>
 </html>
