--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
       <div class="personal_logo">Vy Tran</div>
       <ul class="nav_link--list">
         <li>
-          <a href="" class="
+          <a href="#languages" class="
             nav_link--anchor
             nav_hover-effect
             link_hover-effect--black
@@ -118,6 +118,20 @@
               <span class="language_name">MobX</span>
           </div>       
         </div>
+      </div>
+    </div>
+  </section>
+  <section id="projects">
+    <div class="container">
+      <div class="row">
+        <h1 class="section_title">Here are some of my <span class="text--purple">projects</span></h1>
+        <ul class="project_list">
+          <li class="project">
+            <div class="project_wrapper">
+              <img src="./pictures/loopit.png" class="project_img" alt="my project">
+            </div>
+          </li>
+        </ul>
       </div>
     </div>
   </section>
