--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
            ">Language</a>
         </li>
         <li>
-        <a href="" class="
+        <a href="#projects" class="
             nav_link--anchor
             nav_hover-effect
             link_hover-effect--black
@@ -148,9 +148,69 @@
               </div>
             </div>
           </li>
+          <li class="project">
+            <div class="project_wrapper">
+              <img src="./pictures/loopit.png" class="project_img" alt="my project">
+              <div class="project_description">
+                <h3 class="project_description--title">Car Sale project</h3>
+                <h4 class="project_description--sub-title">
+                  HTML, CSS, JavaScript
+                </h4>
+                <p class="project_description--para">
+                  Lorem ipsum dolor sit amet consectetur adipisicing elit. Pariatur ipsa totam saepe ad labore consequuntur dolorem obcaecati assumenda. Ab numquam doloremque assumenda, aut neque quae laudantium aperiam adipisci animi provident?
+                </p>
+                  <div class="project_description--links">
+                    <a href="" class="project_description--link" target="blank">
+                      <i class="fab fa-github"></i>
+                    </a>
+                    <a href="" class="project_description--link" target="blank">
+                      <i class="fas fa-link"></i>
+                    </a>
+                  </div>
+              </div>
+            </div>
+          </li>
+          <li class="project">
+            <div class="project_wrapper">
+              <img src="./pictures/loopit.png" class="project_img" alt="my project">
+              <div class="project_description">
+                <h3 class="project_description--title">Car Sale project</h3>
+                <h4 class="project_description--sub-title">
+                  HTML, CSS, JavaScript
+                </h4>
+                <p class="project_description--para">
+                  Lorem ipsum dolor sit amet consectetur adipisicing elit. Pariatur ipsa totam saepe ad labore consequuntur dolorem obcaecati assumenda. Ab numquam doloremque assumenda, aut neque quae laudantium aperiam adipisci animi provident?
+                </p>
+                  <div class="project_description--links">
+                    <a href="" class="project_description--link" target="blank">
+                      <i class="fab fa-github"></i>
+                    </a>
+                    <a href="" class="project_description--link" target="blank">
+                      <i class="fas fa-link"></i>
+                    </a>
+                  </div>
+              </div>
+            </div>
+          </li>
         </ul>
       </div>
     </div>
   </section>
+  <footer>
+    <div class="row">
+      <a href="#">
+        <figure>
+          <img src="" class="footer_logo--img" crossorigin="anomynous"  alt="my logo">
+        </figure>
+      </a>
+      <div class="footer_social--list">
+        <a href="https://github.com/VyTran913" class="
+            footer_social--link
+            link_hover-effect
+            link-hover-effect--white
+        " target="blank"></a>
+      </div>
+    </div>
+  </footer>
 </body>
 </html>
