--- a/index.html
+++ b/index.html
@@ -197,20 +197,40 @@
     </div>
   </section>
   <footer>
-    <div class="row">
-      <a href="#">
+    <div class="row footer_row">
+      <a href="#" class="footer_anchor">
         <figure>
-          <img src="" class="footer_logo--img" crossorigin="anomynous"  alt="my logo">
+          <img src="./pictures/Vy.png" class="footer_logo--img"   alt="my logo">
         </figure>
+        <span class="footer_logo--popper">
+          Top 
+          <i class="fas fa-arrow-up"></i>
+        </span>
       </a>
       <div class="footer_social--list">
         <a href="https://github.com/VyTran913" class="
             footer_social--link
             link_hover-effect
             link-hover-effect--white
-        " target="blank"></a>
-      </div>
-    </div>
-  </footer>
+        " target="blank">Github</a>     
+        <a href="" class="
+            footer_social--link
+            link_hover-effect
+            link-hover-effect--white
+        " target="blank">LinkedIn</a>           
+        <a href="" class="
+            footer_social--link
+            link_hover-effect
+            link-hover-effect--white
+        " target="blank">Email</a>             
+          <a href="" class="
+              footer_social--link
+              link_hover-effect
+              link-hover-effect--white
+          " target="blank">Resume</a>
+        </div>  
+        <div class="footer_copyright">Copyright © 2022 Vy Tran</div>    
+    </div> 
+ </footer>
 </body>
 </html>
