--- a/index.html
+++ b/index.html
@@ -5,7 +5,15 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Vy Tran</title>
-  <link rel="stylesheet" href="./style.css">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Lato:wght@400;700&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="styles/general.css">
+  <link rel="stylesheet" href="styles/nav-bar.css">
+  <link rel="stylesheet" href="styles/about-me.css">
+  <link rel="stylesheet" href="styles/tech-stack.css">
+  <link rel="stylesheet" href="styles/projects.css">
+  <link rel="stylesheet" href="styles/footer.css">
   <script src="https://kit.fontawesome.com/c8e4d183c2.js" crossorigin="anonymous"></script> 
 </head>
 <body>
@@ -13,21 +21,21 @@
     <nav>
       <div class="personal_logo">Vy Tran</div>
       <ul class="nav_link--list">
-        <li>
+        <li class="nav_link">
           <a href="#languages" class="
             nav_link--anchor
-            nav_hover-effect
+            link_hover-effect
             link_hover-effect--black
            ">Language</a>
         </li>
-        <li>
+        <li class="nav_link">
         <a href="#projects" class="
             nav_link--anchor
-            nav_hover-effect
+            link_hover-effect
             link_hover-effect--black
            ">Project</a>
         </li>
-        <li>
+        <li class="nav_link">
         <a href="" class="
             nav_link--anchor
             nav_link--anchor-primary
@@ -41,7 +49,7 @@
           <figure class="about-me_picture--mask">
             <img src="./pictures/profile-picture1.jpg" class="about-me_picture"  alt="picture of me">
           </figure>    
-          <h1 class="about-me_info--title"> Hello! I'm <span class="text--purple">Vy Tran</span> &#128075; </h1>
+          <h1 class="about-me_info--title"> Hello! I'm <span class="text--purple">Vy Tran</span> &nbsp;<span class="wave"> 👋</span> </h1>
             <p class="about-me_info--para">
               My goal is to be <strong class="text--purple">skillfull software engineer</strong> with a strong passion for website, application 
               development
@@ -211,22 +219,22 @@
         <a href="https://github.com/VyTran913" class="
             footer_social--link
             link_hover-effect
-            link-hover-effect--white
+            link_hover-effect--white
         " target="blank">Github</a>     
         <a href="" class="
             footer_social--link
             link_hover-effect
-            link-hover-effect--white
+            link_hover-effect--white
         " target="blank">LinkedIn</a>           
         <a href="" class="
             footer_social--link
             link_hover-effect
-            link-hover-effect--white
+            link_hover-effect--white
         " target="blank">Email</a>             
           <a href="" class="
               footer_social--link
               link_hover-effect
-              link-hover-effect--white
+              link_hover-effect--white
           " target="blank">Resume</a>
         </div>  
         <div class="footer_copyright">Copyright © 2022 Vy Tran</div>    
